# chessmate-rs

./: Cargo.toml  README.md  check.sh  index.html  rustfmt.toml  tic_tac_toe.sh
src/: chess.rs  core.rs  domain.rs  engine.rs  game.rs  gamepool.rs  handlers.rs  lib.rs  lobby.rs  main.rs  runtime.rs  server.rs  tic_tac_toe.rs
src/common/: communication.rs  core.rs  domain.rs  gameserver.rs  handlers.rs  messages.rs  mod.rs  query_utils.rs  server.rs
src/engine/: engine.rs
src/game/: game.rs  mod.rs
src/gamepool/: game.rs  gamepool.rs  mod.rs
src/old/: game.rs  gamepool.rs
src/old_two/: core.rs  domain.rs  handlers.rs  lobby2.rs  observers.rs
src/server/: actioner.rs  handlers.rs  mod.rs  pairing.rs  server.rs
src/tic_tac_toe/: communication.rs  core.rs  engine.rs  game.rs  gamepool.rs  lobby.rs  logic.rs  mod.rs
static/: chess.html  chess.js  index.js  tic_tac_toe.html  tic_tac_toe.js
